objects/AcctSeed__Ledger__c.object
<CustomObject>
    <description>Used to associate and aggregate financial transaction or budget entries with a specific entity.</description>
    <fields>
        <fullName>AcctSeed__Billing_Activity_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the billing activity statement format here. The billing activity statement format is the PDF format used to send billing activity statements to a customer.</inlineHelpText>
        <label>Billing Activity Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Activity Statement</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Activity Statement</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Ledgers (Billing Activity Statement Format)</relationshipLabel>
        <relationshipName>Billing_Activity_Statement_Formats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Outstanding_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the billing outstanding statement format here. The billing outstanding statement format is the PDF format used to send billing outstanding statements to a customer.</inlineHelpText>
        <label>Billing Outstanding Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Outstanding Statement</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Outstanding Statement</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Ledgers (Billing Outstanding Statement Format)</relationshipLabel>
        <relationshipName>Billing_Outstanding_Statement_Formats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the account that the majority of payments are made from and that deposits are made to. When entering a cash receipt it will default to this bank account. When creating a cash disbursement batch it will default to this account.</inlineHelpText>
        <label>Default Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only GL Accounts with Bank checked are allowed.</errorMessage>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Default_Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Billing_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select your primary billing format here. When you create a billing and leave this field blank, the default billing format will be selected after you press save.</inlineHelpText>
        <label>Default Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Billing</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Default_Billing_Formats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Packing_Slip_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select your primary packing slip format here. When you create a shipment record and leave this field blank, the default packing slip format will be selected after you press save.</inlineHelpText>
        <label>Default Packing Slip Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Packing Slip</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Packing Slip</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Ledgers (Default Packing Slip Format)</relationshipLabel>
        <relationshipName>Default_Packing_Slip_Formats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Purchase_Order_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select your primary purchase order format here. When you create a purchase order and leave this field blank, the default purchase order format will be selected after you press save.</inlineHelpText>
        <label>Default Purchase Order Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Purchase Order</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Purchase Order</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Ledgers (Default Purchase Order Format)</relationshipLabel>
        <relationshipName>Default_Purchase_Order_Formats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                    <default>true</default>
                    <label>Budget</label>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ledger</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Budget</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <label>Budget</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Transactional</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Transactional</value>
        </filters>
        <label>Transactional</label>
    </listViews>
    <nameField>
        <label>Ledger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>